# index

./: .gitignore  .gitmodules  CLAUDE.md  EMAIL_TEMPLATES.md  FRONTEND_PROTOCOL_CONNECTIONS.md  HOWITWORKS.md  Makefile  PROFILE-GRAPH-FLOW-DIAGRAM.md  PROFILE-GRAPH-IMPLEMENTATION-SUMMARY.md  PROFILE-GRAPH-REFACTOR-SUMMARY.md  PROFILE-GRAPH-USAGE-GUIDE.md  QUICKSTART.md  README.md  USER-INFO-DETECTION-EXAMPLE.md  USER-INFO-DETECTION-FEATURE.md  draft_p7012.ts  email-debug.md  llms-ctx.txt  llms-full.txt  package.json  railway.toml
.claude/: handoff.md  launch.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.cursor/: settings.json
backend/: .env.example  .gitignore  README.md  bunfig.toml  drizzle.config.ts  eslint.config.mjs  package.json  railway.toml  tsconfig.json
cli/: .env.example  .gitignore  README.md  cli-output-reference.html  package.json  tsconfig.json
docs/: INTEGRATION_GUIDE.md  crawl4ai-testing.md  drizzle-migration-baseline.txt  observability-changes.md  optimization-changes.md  protocol-deep-dive.md  ritual-config.json  swe-config.json  unified-sync.md
evaluator/: .env.example  .gitignore  drizzle.config.ts  middleware.ts  next.config.ts  package.json
frontend/: .env.example  .gitignore  Dockerfile  README.md  build-blog.ts  eslint.config.mjs  index.html  inject-blog-meta.ts  meta.config.ts  next.config.ts  package.json  playwright.config.ts  railway.toml  server.ts  tailwind.config.js  tsconfig.json  vite.config.ts
webhooks/openclaw/: Cargo.toml  README.md
webhooks/openclaw/src/: dedup.rs  handler.rs  prompt.rs
(+1914 files in other folders)
